--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </header><!-- End Header -->
 
   <!-- ======= hero Section ======= -->
-  <section id="hero">
+  <section id="hero" dir="ltr">
     <div class="hero-container">
       <div id="heroCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
@@ -343,7 +343,7 @@
         <div class="row">
 
           <div class="col-lg-4 col-md-6 footer-info">
-            <h3></h3>
+            
             <p>نفتخر نحن شركة الثقة والأمانة للاستشارت بتقديم خدمات الاستشارات المالية والإدارية للمنظمات، مما يسهم في بناء وازدهار اقتصاد المملكة العربية السعودية.
               الاهتمام بالعنصر البشري كان ولايزال أولي اهتماماتنا، فهو يمثل الركيزة الأساسية لمواجهة كافة التحديات المهنية والعملية في كافة الأنشطة والتخصصات.
               إننا نتطلع لمستقبل أفضل من النمو والتطور والنجاح المستمر، ونعمل دائماً على تلبية احتياجات عملاءنا في ظل مناخ من التعاون والجدية والالتزام والجودة لتقديم أفضل الخدمات.
