--- a/Services4.html
+++ b/Services4.html
@@ -48,7 +48,7 @@
               <li class="dropdown"><a href="#services"><span>الخدمات</span> <i class="bi bi-chevron-down"></i></a>
                 <ul>
                 
-                  <li><a href="Services.html">التخطيط الاستراتيجي والتميز المؤسسي</a></li>
+                  <li><a href="Services.html">تأسيس وإدارة المشاريع</a></li>
                   <li><a href="Services1.html">التخطيط الاستراتيجي والتميز المؤسسي</a></li>
                   <li><a href="Services2.html">إعادة هيكلة الشركات المتعثرة</a></li>
                   <li><a href="Services3.html">التخطيط والمعلومات الإدارية</a></li>
@@ -56,15 +56,7 @@
                   <li><a href="Services5.html">استشارات الموارد البشرية</a></li>
                   <li><a href="Services6.html">استشارات مالية ومحاسبية </a></li>
                   <li><a href="Services7.html"> تصميم إجراءات العمل وإدارة معايير القياس والأداء</a></li>
-                  <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-left"></i></a>
-                    <ul>
-                      <li><a href="#">Deep Drop Down 1</a></li>
-                      <li><a href="#">Deep Drop Down 2</a></li>
-                      <li><a href="#">Deep Drop Down 3</a></li>
-                      <li><a href="#">Deep Drop Down 4</a></li>
-                      <li><a href="#">Deep Drop Down 5</a></li>
-                    </ul>
-                  </li>
+                 
                 </ul>
               </li>
 
