--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <nav id="navbar" class="navbar">
             <ul>
               <li><a class="nav-link scrollto" href="index.html">الرئيسية</a></li>
-              <li><a class="nav-link scrollto" href="#about">من نحن</a></li>
+              <li><a class="nav-link scrollto" href="about.html">من نحن</a></li>
               <li class="dropdown"><a href="#services"><span>الخدمات</span> <i class="bi bi-chevron-down"></i></a>
                 <ul>
                   <li class="dropdown"><a href=""> استشارات أدارية <i class="bi bi-chevron-left"></i></a>
@@ -110,7 +110,7 @@
           <div class="carousel-item active" style="background-image: url(assets/img/portfolio/businessmen-analyzing-bar-charts-their-workplace.png)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">نرسم مسار النجاح ونبني جسرا الي المستقبل</h2>
+                <h2 class="animate__animated animate__fadeInDown">نرسم مسار النجاح ونبني جسرًا إلى المستقبل</h2>
                </div>
             </div>
           </div>
@@ -153,72 +153,14 @@
   <main id="main">
 
    
-
-    <!-- ======= About Us Section ======= -->
-    <section id="about">
+    <section id="services">
       <div class="container" data-aos="fade-up">
-
-        <header class="section-header">
-          <h3>من نحن</h3>
-          <p> 
-            متخصصون في تقديم خدمات استشارية لعملاءنا في مختلف الصناعات والقطاعات. نهدف  إلى تقديم الإرشاد والمشورة الاستراتيجية لمساعدة العملاء على تحقيق أهدافهم وحل مشكلاتهم بفعالية.<br>
-            نملك فريق من الخبراء والمحترفين ذوي الخبرة في مجموعة متنوعة من المجالات، مثل الإدارة، والتسويق، والتكنولوجيا، والمالية، والقانون، وغيرها. يقوم المستشارون بتحليل وتقييم الوضع الحالي للعميل ويقدمون استشارات مخصصة وحلا مبتكرًا لتلبية احتياجاتهم وتحسين أدائهم.
-          </p>
-        </header>
-
-        <div class="row about-cols">
-
-          <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="about-col">
-              <div class="img">
-                <img src="assets/img/about-mission.jpg" alt="" class="img-fluid">
-                <div class="icon"><i class="bi bi-bar-chart"></i></div>
-              </div>
-              <h2 class="title"><a href="#">رؤيتنا</a></h2>
-              <p>العمق الاستراتيجي الذي تتجسد فيه طموحاتنا وتطلعاتنا المستقبلية. ونسعى إلى تحقيق التأثير الإيجابي في عالم الأعمال. <br>
-                تتسم رؤيتنا بالتميز والتطوير المستدام، حيث نهدف  إلى تقديم أفضل الخدمات والحلول لعملائنا والمساهمة في تحسين أدائهم ونجاحهم. تعبر الرؤية عن القيم والمبادئ التي نتمسك بها، والتزامنا بتحقيق التميز والاستدامة في جميع جوانب عملنا.
-                <br><br><br><br><br><br>
-              </p>
-            </div>
-          </div>
-
-          <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
-            <div class="about-col">
-              <div class="img">
-                <img src="assets/img/about-plan.jpg" alt="" class="img-fluid">
-                <div class="icon"><i class="bi bi-brightness-high"></i></div>
-              </div>
-              <h2 class="title"><a href="#">رسالتنا</a></h2>
-              <p>
-                تقديم مجموعة من الخدمات الاستشارية في مجال الإدارة و المالية والمحاسبية ذات القيمة المضافة لعملائنا، مما يحقق شراكة مثمرة تسهم في بناء وازدهار اقتصاد المملكة العربية السعودية، عن طريق المزج الجيد بين الخبرة الدولية والخبرة المحلية، باستخدام المعايير والأنظمة الإدارية والمالية والمحاسبية المعتمدة لتحقيق الموثوقية العالية في المنظمات التي نعمل معها لنكون دوماً داعمين للنجاح.
-                <br><br><br><br><br><br>
-              </p>
-            </div>
-          </div>
-
-          <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
-            <div class="about-col">
-              <div class="img">
-                <img src="assets/img/about-vision.jpg" alt="" class="img-fluid">
-                <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-              </div>
-              <h2 class="title"><a href="#">قيمنا</a></h2>
-              <p>الثقة : أن تكون المعلومات والبيانات الماليّة الواردة في القوائم الماليّة قيّمة وجديرة بالثقة<br>
-                الأمانة : الالتزام بالأخلاق والقوانين المالية والمحاسبية<br>
-                الاحترافية: الالتزام بأعلى معايير الاحترافية في تقديم الخدمات والمشورة للعملاء.<br>
-                الشراكة: بناء علاقات تعاونية قوية مع العملاء والعمل معهم كشركاء.<br>
-                الابتكار: تعزيز الابتكار واستخدام التكنولوجيا والأساليب الحديثة لتقديم الحلول الأمثل.<br>
-                التفكير الاستراتيجي: القدرة على التفكير بعمق ومواكبة التطور والعمل للمستقبل.<br>
-                تحقيق النتائج: التركيز على تحقيق النتائج والأهداف المحددة بفعالية.
-
-              </p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End About Us Section -->
+        <header class="section-header wow fadeInUp">
+          <h3>لماذا نحن</h3>
+         </header>
+        <img src="assets/img/hero-carousel/1.png" >
+    </div>
+    </section>
 
     <!-- ======= Services Section ======= -->
     <section id="services">
