--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   <link href="assets/img/Logo PNG 1.png" rel="apple-touch-icon">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cairo&family=Changa:wght@600&family=Dancing+Script:wght@600;700&family=Noto+Kufi+Arabic:wght@500;600&family=Open+Sans:wght@600&family=Tangerine:wght@700&family=The+Girl+Next+Door&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo&family=Changa:wght@600&family=Dancing+Script:wght@600;700&family=Noto+Kufi+Arabic:wght@500;600&family=Open+Sans:wght@600&family=Tangerine:wght@700&family=The+Girl+Next+Door&display=swap" rel="stylesheet">
+   
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -158,7 +159,7 @@
         <header class="section-header wow fadeInUp">
           <h3>لماذا نحن</h3>
          </header>
-        <img src="assets/img/hero-carousel/1.png" >
+        <img src="assets/img/hero-carousel/4.png" >
     </div>
     </section>
 
@@ -182,7 +183,7 @@
             <h4 class="title"><a href=""> وضع مؤشرات تقيم الاداء</a></h4>
           </div>
           <div class="col-lg-4 col-md-6 box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="bi bi-diagram-3-fill""></i></div>
+            <div class="icon"><i class="bi bi-diagram-3-fill"></i></div>
             <h4 class="title"><a href="">الهيكل التنظيمي</a></h4>
            </div>
           <div class="col-lg-4 col-md-6 box" data-aos="fade-up" data-aos-delay="200">
